force-app/main/default/objects/LSMFlat__c/LSMFlat__c.object-meta.xml
<CustomObject>
    <label>LSMFlat</label>
    <nameField>
        <label>LSMFlat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMSFlats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>