force-app/main/default/objects/LSMFlat__c/fields/LMSBuilding__c.field-meta.xml
<CustomField>
    <fullName>LMSBuilding__c</fullName>
    <label>LMSBuilding</label>
    <referenceTo>LMSBuilding__c</referenceTo>
    <relationshipLabel>LMSFlats</relationshipLabel>
    <relationshipName>LMSFlats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>