force-app/main/default/objects/LSMFlat__c/fields/Price_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Price_Monthly__c</fullName>
    <label>Price(Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>